split deprecated and new triggers